AWCReporingApplication/force-app/main/default/objects/Transportation__c/fields/Transport_Types__c.field-meta.xml
<CustomField>
    <fullName>Transport_Types__c</fullName>
    <label>Transport Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Transportation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>British Airways</fullName>
            </value>
            <value>
                <fullName>KLM</fullName>
            </value>
            <value>
                <fullName>Uber</fullName>
            </value>
            <value>
                <fullName>Lyft</fullName>
            </value>
            <value>
                <fullName>Yellow Cab</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Avis</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Hertz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>