AWCReporingApplication/force-app/main/default/objects/Transportation__c/fields/Type_of_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Transportation__c</fullName>
    <label>Type of Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Rental Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>